--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -2,7 +2,7 @@
 
 <img src="../img/lasagna.jpg" alt="picture of a lasagna">
 <p>
-    This is the best lasagna we have ever had, including restaurants! Great with a salad and garlic bread. 
+    <a href="https://www.allrecipes.com/recipe/11942/kristys-lasagna/">This</a> is the best lasagna we have ever had, including restaurants! Great with a salad and garlic bread. 
 </p>
 <h2>Ingreddients: </h2>
 <ul>
@@ -31,3 +31,20 @@
         2 cups shredded mozzarella cheese 
     </li>
 </ul>
+<h2>
+    Steps:
+    <ol>
+        <li>
+            In a large pot cook lasagna noodles in boiling salted water until al dente. Rinse with cool water. Drain.
+        </li>
+        <li>
+            In large sauce pan cook ground beef. Drain excess grease. Combine tomato sauces and tomato paste with ground beef and simmer until bubbly. Add garlic salt and Italian seasoning and reduce heat to low simmer. Cook for 10 minutes.
+        </li>
+        <li>
+            To assemble, in the bottom of a 13x9 inch baking dish spread a thin layer of sauce. Next, add a layer of noodles, ricotta cheese, sauce/ground beef mixture, and then grated mozzarella cheese. Repeat until baking dish is filled. Garnish top with additional shredded mozzarella cheese.
+        </li>
+        <li>
+            In a preheated 375 degree F(190 degree C) oven bake for 30 minutes or until bubbly. Let stand for 15 minutes and serve.
+        </li>   
+    </ol>g
+</h2>
