Fixed Heading at lasagna recipe page

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -31,8 +31,7 @@
         2 cups shredded mozzarella cheese 
     </li>
 </ul>
-<h2>
-    Steps:
+<h2>Steps: </h2>
     <ol>
         <li>
             In a large pot cook lasagna noodles in boiling salted water until al dente. Rinse with cool water. Drain.
@@ -46,5 +45,4 @@
         <li>
             In a preheated 375 degree F(190 degree C) oven bake for 30 minutes or until bubbly. Let stand for 15 minutes and serve.
         </li>   
-    </ol>g
-</h2>
+    </ol>
