Added pizza and fried rice recipes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/thai_fried_rice.html">Thai Fried Rice</a></li>
+        <li><a href="recipes/pizza.html">Homemade Pepperoni Pizza</a></li>
     </ul>
 </body>
 </html>
