added funny Homer image

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+
+    <img src="img/homer.jpeg">
+
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
         <li><a href="recipes/thai_fried_rice.html">Thai Fried Rice</a></li>
