--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna Recipe</title>
+    <link rel="stylesheet" href="../styles.css"
 </head>
 <body>
-    
-</body>
-</html>
+
 <h1>Lasagna Recipe</h1>
 
 <img src="../img/lasagna.jpg" alt="picture of a lasagna">
@@ -65,3 +64,6 @@
                  Let stand for 15 minutes and serve.</p>
         </li>   
     </ol>
+    <h3><a href="../index.html">Return to Home</a></h3>
+</body>
+</html>
