--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homemade Pepperoni Pizza Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    
-</body>
-</html>
+
 <h1>Homemade Pepperoni Pizza Recipe</h1>
 
 <img src="../img/pizza.jpg" alt="picture of a pepperioni pizza">
@@ -103,3 +102,6 @@
                  through baking.</p>
         </li>   
     </ol>
+    <h3><a href="../index.html">Return to Home</a></h3>
+</body>
+</html>
