--- a/recipes/thai_fried_rice.html
+++ b/recipes/thai_fried_rice.html
@@ -5,11 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thai Fried Rice Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    
-</body>
-</html>
 <h1>Thai Fried Rice Recipe</h1>
 
 <img src="../img/friedrice.jpg" alt="picture of Thai Fried Rice">
@@ -94,4 +92,8 @@
                 rice mixture. Fold in bacon bits. Serve with cucumber, green onions, cilantro, 
                 lemon wedges, and chile peppers.</p>
         </li>   
-    </ol>
+    </ol>    
+    <h3><a href="../index.html">Return to Home</a></h3>
+</body>
+</html>
+
